examples/core/errors/syntax_errors/04_bare_hash.core.tao
// Parse Error: Hash without constructor
// Hash must be followed by an identifier (constructor name)
#
